--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MapHistory</title>
+  <title>Map History</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -11,4 +11,7 @@
 <body>
   <app-root></app-root>
 </body>
+<footer>
+  <p>Cette page a été créée par ©Hugo SEQUIER sur Angular</p>
+</footer>
 </html>
